force-app/main/default/objects/Form_Field__c/Form_Field__c.object-meta.xml
<CustomObject>
    <description>Stores field definitions for web forms</description>
    <label>Form Field</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>