force-app/main/default/objects/Form_Field__c/fields/Case_Field__c.field-meta.xml
<CustomField>
    <fullName>Case_Field__c</fullName>
    <description>Which Case field this maps to</description>
    <label>Case Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>SuppliedName</fullName>
                <label>Supplied Name</label>
            </value>
            <value>
                <fullName>SuppliedEmail</fullName>
                <label>Supplied Email</label>
            </value>
            <value>
                <fullName>SuppliedPhone</fullName>
                <label>Supplied Phone</label>
            </value>
            <value>
                <fullName>SuppliedCompany</fullName>
                <label>Supplied Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>