force-app/main/default/objects/Form_Field__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this field is required</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>