force-app/main/default/objects/Form_Field__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Display order of the field (1, 2, 3...)</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>